2009-10-19  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.74

	Patch from Laszlo Pere for NB#142250 - Unable to select all images in
	multiselection view after image viewer come back from background

	* matchbox/core/mb-wm-client.c
	(mb_wm_client_get_last_focused_transient): Don't return animation
	actors.

2009-10-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.73

	* matchbox/core/mb-wm-types.h, matchbox/core/mb-wm-atoms.c: Add
	_HILDON_WM_WINDOW_TYPE_HOME_APPLET atom.
	* matchbox/core/mb-window-manager.c (mb_wm_activate_client_real,
	mb_wm_unfocus_client): Do not automatically assign focus to home
	applets. Related to NB#140246 - Input method support to desktop

2009-10-14  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#140193 - Information banners are not shown in non-composite
	mode

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): Use the frame for
	MBWMClientTypeNotes for changing the redirection.

	Release 0.2.72

2009-10-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Don't set _NET_WORKAREA more often than necessary.
	Don't set _MB_APP_WINDOW_LIST_STACKING at all.

	* matchbox/core/mb-window-manager.h:
	  Added mb_wm_update_workarea().
	* matchbox/core/mb-window-manager.c (mb_wm_update_root_win_rectangles):
	  Use it.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	  Likewise.

2009-10-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes: NB#124398 - Whole application should be closed with 'End
	current task', not just topmost window

	* matchbox/core/mb-wm-client.c (mb_wm_client_shutdown): Simplify and
	check some NULLs just in case.
	* matchbox/core/mb-wm-root-window.c
	(mb_wm_root_window_handle_message): "No more Mr. Nice Guy": kill
	clients on 'End current task' message.

2009-10-08  Gordon Williams <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-window-manager.h: Just added some extra comments to